data/forge_javadoc/1.7.10/raw/net/minecraft/client/gui/stream/GuiTwitchUserMode.md
---
title: "GuiTwitchUserMode"
description: "public class GuiTwitchUserMode extends GuiScreen"
package: "net/minecraft/client/gui/stream"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/client/gui/stream/GuiTwitchUserMode.html"
sourceType: javadoc
---

# GuiTwitchUserMode

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.stream.GuiTwitchUserMode

## Class signature

```java
public class GuiTwitchUserMode extends GuiScreen
```

## Methods

- `protected void actionPerformed(GuiButton p_146284_1_)`
- `void drawScreen(int p_73863_1_, int p_73863_2_, float p_73863_3_)`
- `static java.util.List func_152328_a(java.util.Set p_152328_0_, java.util.Set p_152328_1_, IStream p_152328_2_)`
- `static IChatComponent func_152329_a(ChatUserMode p_152329_0_, java.lang.String p_152329_1_, boolean p_152329_2_)`
- `static IChatComponent func_152330_a(ChatUserSubscription p_152330_0_, java.lang.String p_152330_1_, boolean p_152330_2_)`
- `void initGui()`

## Fields

- `GuiTwitchUserMode`
