data/forge_javadoc/1.8.9/raw/net/minecraft/client/gui/stream/GuiTwitchUserMode.md
---
title: "GuiTwitchUserMode"
description: "public class GuiTwitchUserMode extends GuiScreen"
package: "net/minecraft/client/gui/stream"
version: "1.8.9"
forgeBuild: "11.15.1.2318"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.8.9-11.15.1.2318/net/minecraft/client/gui/stream/GuiTwitchUserMode.html"
sourceType: javadoc
---

# GuiTwitchUserMode

**Inheritance:** java.lang.Object → net.minecraft.client.gui.Gui → net.minecraft.client.gui.GuiScreen → net.minecraft.client.gui.stream.GuiTwitchUserMode

## Class signature

```java
public class GuiTwitchUserMode extends GuiScreen
```

## Methods

- `protected void actionPerformed(GuiButton button)` — Called by the controls from the buttonList when activated.
- `void drawScreen(int mouseX, int mouseY, float partialTicks)` — Draws the screen and all the components in it.
- `static java.util.List<IChatComponent> func_152328_a(java.util.Set<ChatUserMode> p_152328_0_, java.util.Set<ChatUserSubscription> p_152328_1_, IStream p_152328_2_)`
- `static IChatComponent func_152329_a(ChatUserMode p_152329_0_, java.lang.String p_152329_1_, boolean p_152329_2_)`
- `static IChatComponent func_152330_a(ChatUserSubscription p_152330_0_, java.lang.String p_152330_1_, boolean p_152330_2_)`
- `void initGui()` — Adds the buttons (and other controls) to the screen in question.

## Fields

- `GuiTwitchUserMode`
